# flakebox

./: .gitignore  .treefmt.toml  .typos.toml  AGENTS.md  Cargo.toml  README.md  README.update.sh  flake.nix  justfile  justfile.custom  update-statics.sh
.cargo/: config.toml
.config/: last-share
.config/fakeroot/: current
.config/flakebox/: current  id  share  shellHook.sh
.config/selfci/: ci.sh
.github/workflows/: flakebox-ci.yml  flakebox-flakehub-publish.yml
checks/: default.nix  mergeArgs-tests.nix
checks/custom-stdenv/: default.nix
checks/nextest/: Cargo.toml  default.nix
checks/nextest/crate/: Cargo.toml
checks/workspace-cross-compile/: Cargo.toml  default.nix
checks/workspace-cross-compile/lib/: Cargo.toml
checks/workspace-cross-compile/lib/src/: lib.rs
checks/workspace-cross-compile/rocksdb/: Cargo.toml
checks/workspace-cross-compile/scripts/: e2e-tests.sh
checks/workspace-sanity/: Cargo.toml  default.nix
checks/workspace-sanity/lib/: Cargo.toml
docs/: README.md  SUMMARY.md  android-toolchains.md  best-practices.md  book.toml  building-new-project.md  crane.md  darwin-toolchains.md  flake-template.md  flakeboxLib.md  getting-started.md  ios-toolchains.md  linux-toolchains.md  native-toolchains.md  nixos-options.md  technical-details.md
flakebox-bin/: Cargo.toml
flakebox-bin/src/: main.rs  opts.rs
lib/: buildOutputs.nix  craneMultiBuild.nix  default.nix  flakeboxBin.nix  mapWithToolchains.nix  mkAndroidTarget.nix  mkAndroidToolchain.nix  mkClangTarget.nix  mkDevShell.nix  mkDevShellHook.sh  mkFenixMultiToolchain.nix  mkFenixToolchain.nix  mkIOSTarget.nix  mkIOSToolchain.nix  mkLintShell.nix  mkNativeTarget.nix  mkShells.nix  mkStdFenixToolchains.nix  mkStdTargets.nix  mkStdToolchains.nix  mkTarget.nix  pickBinary.nix  shareDir.nix  stdCrossToolchains.nix  stdToolchains.nix  toolchain.nix  universalLlvmConfig.nix
lib/ci/: default.nix
lib/crane/: enhance.nix
lib/filter/: default.nix
lib/git/: pre-commit
lib/modules/: cargo.nix  convco.nix  crane.nix  direnv.nix  env.nix  flakbox.nix  git.nix  github.nix  just.nix  linker.nix  motd.nix  nix.nix  rootDir.nix  rust.nix  semgrep.nix  shareDir.nix  shellcheck.nix  toolchain.nix  treefmt.nix  typos.nix
lib/modules/git/: pre-commit.head.sh
lib/modules/just/: justfile
lib/modules/rust/: flakebox-in-each-cargo-workspace
misc/git-hooks/: commit-msg  commit-template.txt  pre-commit
templates/default/: .gitignore  Cargo.toml  flake.nix
(+1 files in other folders)
