[workspace]
members = [ "flakebox-bin" ]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
edition = "2021"
description = "Rust dev experience (DX) we can share and love."
documentation = "https://github.com/rustshop/flakebox"
readme = "README.md"
repository = "https://github.com/rustshop/flakebox"
license = "MPL-2.0"
keywords = ["nix", "tool", "dx"]

[profile.dev]

[profile.ci]
debug = "line-tables-only"
inherits = "dev"
incremental = false
lto = "off"

[profile.release]
debug = "line-tables-only"

# Workaround: https://github.com/rust-lang/cargo/issues/12457 which causes
#             https://github.com/ipetkov/crane/issues/370
[profile.dev.build-override]
debug = false
[profile.ci.build-override]
debug = false
[profile.release.build-override]
debug = false
