[package]
name = "flakebox"
version = "0.0.1"
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
clap = { version = "4.4.0", features = ["derive", "env"] }
duct = "0.13.6"
error-stack = "0.4.1"
thiserror = "1.0.48"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
walkdir = "2"
