[package]
name = "flakebox"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
clap = { version = "4.4.0", features = ["derive", "env"] }
duct = "0.13.6"
error-stack = "0.4.1"
fs-err = "2.9.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.48"
toml_edit = "0.22.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
walkdir = "2"
